# clay

./: .gitignore  Cargo.toml  README.md
examples/: build_ex.rs  main.rs
examples/console_app/: Cargo.toml
examples/console_app/src/: main.rs
src/: byte_reader.rs  endian.rs  lib.rs  main_file_header.rs  multi_patch_part_type.rs  parser.rs  play.rs  primitive_metadata.rs  primitive_readers.rs  record_header.rs  shape_data.rs  shape_readers.rs  shape_type.rs  shapes.rs  util.rs
src/shape_readers/: bounds_box.rs  point.rs  polygon.rs
src/shapes/: bounding_box.rs
src/shapes/bounding_box/: parser.rs  shape.rs
